--- a/index.html
+++ b/index.html
@@ -706,7 +706,7 @@
 					<div class="col-md-12 title-section perfection-title-section">
 						<h2 class="title partners-title">Learn Programming with Fun</h2> -->
 						<!-- <p class="title-details">Show your clients something eye catching here to grab their attention and make them want to signup to your great service today</p> -->
-					</<!-- div>
+					<!--</- div>
 					<div class="perfection-header-img">
 						<iframe width="560" height="315" src="https://www.youtube.com/embed/9CyrD6kT5ZY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 						<iframe width="560" height="315" src="https://www.youtube.com/embed/g-M7E52LFDk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
