--- a/index.html
+++ b/index.html
@@ -695,24 +695,24 @@
 
 
     	<!-- SECTION LABEL -->
-		<!-- <div id="perfection"></div> -->
+		<div id="perfection"></div>
 			<!-- PERFECTION SECTION -->
-			<!-- <div class="perfection-section"> -->
+			<div class="perfection-section">
 				<!-- <div class="perfection-bg-section-left">
 				</div>
 				<div class="perfection-bg-section-right">
 				</div> -->
-		<!-- 		<div class="perfection-container">
+				<div class="perfection-container">
 					<div class="col-md-12 title-section perfection-title-section">
-						<h2 class="title partners-title">Learn Programming with Fun</h2> -->
+						<h2 class="title partners-title">Learn Programming with Fun</h2>
 						<!-- <p class="title-details">Show your clients something eye catching here to grab their attention and make them want to signup to your great service today</p> -->
-					<!--</- div>
-					<div class="perfection-header-img">
+					</div>
+					<div class="perfection-header-img youtube-videos">
 						<iframe width="560" height="315" src="https://www.youtube.com/embed/9CyrD6kT5ZY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-						<iframe width="560" height="315" src="https://www.youtube.com/embed/g-M7E52LFDk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/g-M7E52LFDk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
 					</div>
 				</div>
-			</div> -->
+			</div>
     	<!-- SECTION LABEL -->
 		<div id="reviews"></div>
 			<!-- REVIEWS SECTION -->
