--- a/index.html
+++ b/index.html
@@ -708,8 +708,16 @@
 						<!-- <p class="title-details">Show your clients something eye catching here to grab their attention and make them want to signup to your great service today</p> -->
 					</div>
 					<div class="perfection-header-img youtube-videos">
-						<iframe width="560" height="315" src="https://www.youtube.com/embed/9CyrD6kT5ZY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						<div style="width: 100%;  margin: 2rem;">
+							 <div style="position: relative; padding-bottom: 56.15%; height: 0; overflow: hidden;">
+						<iframe 
+                 loading="lazy"
+                 
+						      width="560" height="315" src="https://www.youtube.com/embed/9CyrD6kT5ZY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 						<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/g-M7E52LFDk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+              </div>
+            </div>
+
 					</div>
 				</div>
 			</div>
