--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css" />
 	<link rel="stylesheet" href="assets/js/owlcarousel/owl.theme.default.min.css">
 	<link rel="stylesheet" href="assets/js/owlcarousel/owl.carousel.min.css">
+	<link rel="preload" type="text/css" href="assets/css/style.css">
+	<link rel="preconnect" type="text/css" href="assets/css/style.css">
 	<!-- FONTS -->
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 	<!-- SCRIPTS -->
