--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
 								<h2>Placement Assistance</h2>
 								<p>TGC provides Placement assistance to students.</p>
 								<a href="index.html#contact">Know More</a>
-									<a class="show_mobile" style="text-decoration: none;" href="https://api.whatsapp.com/send?phone=+9582786407&text=I%20want%20to%20know%20more%20about%20the%20Python%20Course"> <i class="fab fa-whatsapp"></i>Text Us </a>
+									<a class="show_mobile" style="text-decoration: none;" href="https://api.whatsapp.com/send?phone=+919582786407&text=I%20want%20to%20know%20more%20about%20the%20Python%20Course"> <i class="fab fa-whatsapp"></i>Text Us </a>
 							</div>
 						</div>
 					</div>
@@ -759,7 +759,7 @@
 						    				<p>Sr. Developer</p>
 						    			</div>
 						    			<div class="reviews-card-details-section">
-						    				<p>Python Course TGC <!-- south ex. --> was completed on time. I am fully satisfied with the quality of education provided by our teacher Uttam Saxena and the infrastructure provided by the institute”</p>
+						    				<p>Python Course TGC south ex. was completed on time. I am fully satisfied with the quality of education provided by our teacher Uttam Saxena and the infrastructure provided by the institute”</p>
 						    			</div>
 						    		</div>
 						    	</div>
@@ -852,7 +852,7 @@
 						<div class="footer-section-logo">
 							<img src="https://www.tgcindia.com/adwords/graphic-design-course-in-delhi/assets/images/logo.png">
 						</div>
-						<p>TGC Animation and Multimedia is located in Jaipur and is run by TGC Animation and Multimedia.</p>
+						<p>TGC Animation and Multimedia is located in Delhi and is run by TGC Animation and Multimedia.</p>
 						<div class="header-social-section footer-social-section">
 							<!-- <a class="header-social-links footer-social-links" href="https://www.facebook.com/tgcjaipur/"> -->
 								<a class="header-social-links footer-social-links" href="https://www.facebook.com/tgcin/">
@@ -889,7 +889,7 @@
 						<h3>East Delhi Branch</h3>
 						<ul>
 							<li>C 57, 2nd floor, Preet Vihar, Opposite Pillar No. 81<br> Near – Preet Vihar Metro Station, Delhi – 110092</li>
-							<li><strong>Tel:</strong> +91- 9582786407, 9582786406</li>
+							<li><strong>Tel:</strong> +91- 9582786406, 9582786407</li>
 							<li><strong>Toll Free No:</strong> <a href="tel:18001020418">1800 1020 418</a></li>
 						</ul>
 					</div>  
